# stonefish_sim

./: .gitignore  CHANGELOG.md  CLAUDE.md  P4_FLAGS.md  README.md  pytest.ini
stonefish_control/stonefish_control/: README.md  package.xml  setup.cfg  setup.py
stonefish_control/stonefish_control/config/bluerov2/: hybrid_controller.yaml  pid_velocity_4dof_params.yaml  position_controller.yaml  unified_controller.yaml  velocity_controller.yaml
stonefish_control/stonefish_control/launch/: control.launch.py  controller.launch.py
stonefish_control/stonefish_control/stonefish_control/: __init__.py
stonefish_control/stonefish_control/stonefish_control/control_interfaces/: __init__.py  _log.py  data_types.py  dp_controller_base.py  dp_pid_controller_base.py  dynamics_loader.py  vehicle.py
stonefish_control/stonefish_control/stonefish_control/controllers/: cascade_controller.py  hybrid_controller.py  position_controller.py  unified_controller.py
stonefish_control/stonefish_control/stonefish_control/nodes/: __init__.py  hybrid_controller_node.py  position_controller_node.py
stonefish_control/stonefish_control/test/: test_data_types.py
stonefish_control/stonefish_control_msgs/: CMakeLists.txt  README.md  package.xml
stonefish_control/stonefish_control_msgs/msg/: GuidanceCommand.msg  Trajectory.msg  Waypoint.msg  WaypointSet.msg
stonefish_control/stonefish_control_msgs/srv/: ResetTrajectory.srv
stonefish_control/stonefish_control_utils/: README.md  README_OPTIMIZER.md  package.xml  setup.py
stonefish_control/stonefish_control_utils/config/: pid_tuning_tool.yaml
stonefish_control/stonefish_control_utils/config/optimizer/: example_optimizer.yaml  gwo_optimizer.yaml  gwo_optimizer_cascaded.yaml  smac3_optimizer.yaml
stonefish_control/stonefish_control_utils/launch/: pid_optimizer.launch.py
stonefish_control/stonefish_control_utils/scripts/: pid_optimizer
stonefish_control/stonefish_control_utils/stonefish_control_utils/: __init__.py
stonefish_control/stonefish_control_utils/stonefish_control_utils/pid_optimizer/: __init__.py  base.py  gwo.py  node.py  smac3.py
stonefish_control/stonefish_control_utils/stonefish_control_utils/pid_tools/: __init__.py  analyzer.py  logger.py  plotter.py  regulator.py  tuning_tool_node.py
stonefish_control/stonefish_trajectory_manager/: ARCHITECTURE.md  README.md  package.xml  setup.cfg  setup.py
stonefish_control/stonefish_trajectory_manager/config/: path_following copy 2.yaml  path_following copy.yaml  path_following.yaml  path_generator.yaml
stonefish_control/stonefish_trajectory_manager/config/examples/: example_cross_path.yaml  example_fixed_heading.yaml  example_square_fast.yaml  example_square_path.yaml  example_straight_pass.yaml  krit_lawnmower.yaml  test_rect_4dof.yaml
stonefish_control/stonefish_trajectory_manager/launch/: path.launch.py  path_following.launch.py  path_generator.launch.py
stonefish_control/stonefish_trajectory_manager/rviz/: path_visualization.rviz
stonefish_control/stonefish_trajectory_manager/stonefish_trajectory_manager/: __init__.py
stonefish_control/stonefish_trajectory_manager/stonefish_trajectory_manager/common/: __init__.py  trajectory_generator.py  trajectory_point.py  waypoint.py  waypoint_set.py
stonefish_control/stonefish_trajectory_manager/stonefish_trajectory_manager/nodes/: __init__.py  path_following_node.py  path_generator_node.py  utils.py
stonefish_control/stonefish_trajectory_manager/stonefish_trajectory_manager/path_following/: __init__.py  alos_guidance.py  ilos_guidance.py
stonefish_control/stonefish_trajectory_manager/test/: test_bezier_curve.py  test_line_segment.py
stonefish_description/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
stonefish_description/data/worlds/: world_caighouse.scn  world_empty.scn  world_infrastructure.scn  world_infrustructure.scn  world_seabed.scn  world_shipwreck.scn  world_terrain.scn
stonefish_description/launch/: bluerov2_tank_multipart_simulation.launch  bluerov2_tank_simulation.launch  girona500_description.launch  girona500_tank_simulation.launch  girona500_valve_turning_simulation.launch  rexrov2_seabed_simulation.launch  sparus2_tank_simulation.launch
stonefish_description/models/rock/: rock.scn
stonefish_description/models/tank/: tank.scn
stonefish_description/models/valve/: valve_panel.scn
stonefish_description/robots/bluerov2/: bluerov2.scn  bluerov2_multipart.scn  create_physical_boxes.py  simplify_all_15.py  split_and_simplify.py
stonefish_description/robots/girona500/: girona500.scn
stonefish_description/robots/rexrov2/: rexrov2.scn
stonefish_description/robots/sparus2/: sparus2.scn
stonefish_description/robots/urdf/: core.urdf.xacro  girona500_eca5emicro.urdf.xarco  payload.urdf.xacro
stonefish_description/scenarios/: blueboat_sea.scn  bluerov2_caighouse.scn  bluerov2_empty.scn  bluerov2_infrastructure.scn  bluerov2_infrustructure.scn  bluerov2_seabed.scn  bluerov2_shipwreck.scn  bluerov2_tank.scn  bluerov2_tank_multipart.scn  bluerov2_terrain.scn  girona500_seabed.scn  girona500_tank.scn  girona500_valve_turning.scn  rexrov2_seabed.scn  rexrov2_tank.scn  sparus2_tank.scn
stonefish_description/worlds/: seabed.scn  tank.scn  valve_turning.scn
stonefish_description/worlds/common/: materials.scn  visual.scn
stonefish_msgs/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
stonefish_msgs/msg/: DVL.msg  INS.msg
stonefish_msgs/srv/: SetOceanCurrent.srv  SetWaveHeight.srv  SetWindVelocity.srv
stonefish_msgs/stonefish_msgs/: CMakeLists.txt  package.xml
stonefish_ros2/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
stonefish_ros2/include/stonefish_ros2/: ROS2SimulationManager.h
stonefish_ros2/launch/: blueboat.launch.py  bluerov2.launch.py  bluerov2_nogpu.launch.py  bluerov2_sim.py  bringup.launch.py  simulator.launch.py  simulator_gpu.launch.py  vehicle.launch.py
stonefish_ros2/src/: stonefish_simulator.cpp  stonefish_simulator_nogpu.cpp
stonefish_ros2/src/stonefish_ros2/: ROS2Interface.cpp  ROS2ScenarioParser.cpp  ROS2SimulationManager.cpp
(+436 files in other folders)
