cmake_minimum_required(VERSION 3.8)
project(stonefish_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

# Generate messages and services
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/BeaconInfo.msg"
  "msg/DVL.msg"
  "msg/DVLBeam.msg"
  "msg/INS.msg"
  "msg/Int32Stamped.msg"
  "msg/NEDPose.msg"
  "msg/ThrusterState.msg"
  "srv/SetMode.srv"
  "srv/SetOceanCurrent.srv"
  "srv/SetWaveHeight.srv"
  "srv/SonarSettings.srv"
  "srv/SonarSettings2.srv"
  DEPENDENCIES std_msgs geometry_msgs
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
