<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stonefish_control_utils</name>
  <version>1.0.0</version>
  <description>Utility tools for PID tuning and optimization in Stonefish simulator</description>
  <maintainer email="luckkim123@gmail.com">Seungmin Kim</maintainer>
  <license>GPL-3.0</license>

  <depend>rclpy</depend>
  <depend>stonefish_control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
